--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
         android:background="@drawable/background_drawing_view_layout"
         />
 
-
     <ImageButton
         android:id="@+id/ib_brush"
         android:layout_width="50dp"
@@ -29,6 +28,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:contentDescription="@string/brush_size"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
