--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/skin"
+            android:onClick="paintClicked"
             android:background="@color/skin"
             />
         <ImageButton
@@ -55,6 +56,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/black"
+            android:onClick="paintClicked"
             android:background="@color/black"
             />
         <ImageButton
@@ -63,6 +65,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/red"
+            android:onClick="paintClicked"
             android:background="@color/red"
             />
         <ImageButton
@@ -71,6 +74,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/green"
+            android:onClick="paintClicked"
             android:background="@color/green"
             />
         <ImageButton
@@ -79,6 +83,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/blue"
+            android:onClick="paintClicked"
             android:background="@color/blue"
             />
         <ImageButton
@@ -87,6 +92,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/yellow"
+            android:onClick="paintClicked"
             android:background="@color/yellow"
             />
         <ImageButton
@@ -95,6 +101,7 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/lollipop"
+            android:onClick="paintClicked"
             android:background="@color/lollipop"
             />
         <ImageButton
@@ -103,7 +110,17 @@
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
             android:tag="@color/random"
+            android:onClick="paintClicked"
             android:background="@color/random"
+            />
+        <ImageButton
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_margin="2dp"
+            android:src="@drawable/pallet_normal"
+            android:tag="@color/white"
+            android:onClick="paintClicked"
+            android:background="@color/white"
             />
     </LinearLayout>
 
